--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>index</title >
-    <a>Loading...</a>
-    <meta http-equiv="REFRESH" content="0;url=PhoneNumbersPage.aspx" />
-</head>
-<body>
-
-</body>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=PhoneNumbersPage.aspx">
+        <script type="text/javascript">
+            window.location.href = "PhoneNumbersPage.aspx"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='PhoneNumbersPage.aspx'>link to example</a>.
+    </body>
 </html>
